# cppnamecheap-cli

./: CMakeLists.txt  tunnel.sh
.github/workflows/: cmake-single-platform.yml
include/: host.hpp  namecheap-cli.hpp  registration_params.hpp
include/resp/: base.hpp  check.hpp  conversions.hpp  create.hpp  dnshost.hpp  getdomains.hpp  gethosts.hpp  getpricing.hpp  sethosts.hpp
src/: main.cpp
tests/: cli_tests.cpp
